k8s/scraper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper
  namespace: manga-cdc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
  template:
    metadata:
      labels:
        app: scraper
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "2112"
    spec:
      containers:
        - name: scraper
          image: ghcr.io/aeswibon/manga-cdc/scraper:latest
          ports:
            - containerPort: 2112
          livenessProbe:
            httpGet:
              path: /metrics
              port: 2112
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /metrics
              port: 2112
            initialDelaySeconds: 5
            periodSeconds: 5
