k8s/kafkaui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafkaui
  namespace: manga-cdc
spec:
  selector:
    app: kafkaui
  ports:
    - port: 8085
      targetPort: 8080
