k8s/scraper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraper
  namespace: manga-cdc
spec:
  selector:
    app: scraper
  ports:
    - port: 2112
      targetPort: 2112
